--- a/frontend/src/Styles/Contact.css
+++ b/frontend/src/Styles/Contact.css
@@ -22,14 +22,14 @@
 .contacts {
     
     width: 100%;
-    height: 90vh;
+    height: 80vh;
     
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
 
-p {
+.us {
     width: 50%;
     position: relative;
     left: 10%;
@@ -37,12 +37,16 @@ p {
     font-style: normal;
     font-weight: 400;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 0.5px solid black;
+    padding: 10%;
+    border-radius: 10px;
+    background: linear-gradient(180deg, rgba(3, 191, 213, 0.2) 0%, rgba(0, 0, 0, 0) 100%), #F7F7F7;
 }
 
 .contact-form {
     background: #E1E1E1;
     width: 34%;
-    height: 50vh;
+    height: 60vh;
     border: 1px solid black;
     position: relative;
     right: 12%;
@@ -51,7 +55,7 @@ p {
 .reader {
 
     width: 100%;
-    height: 50vh;
+    height: 58vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -60,8 +64,8 @@ p {
     background: linear-gradient(0deg, rgba(255, 202, 202, 0.2), rgba(255, 202, 202, 0.2)), #F7F7F7;
 
     position: relative;
-    top: 18%;
-    left: 18%;
+    top: 14%;
+    left: 14%;
 
 }
 
@@ -78,6 +82,8 @@ p {
 .your-message {
     font-size: 85%;
     padding: 1.5% 1.5%;
+    max-width: 80%;
+    min-height: 20vh;
 }
 
 #first {
@@ -102,5 +108,6 @@ p {
     padding: 6px;
     position: relative;
     right: 30%;
+    cursor: pointer;
 
 }
