--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -81,9 +81,34 @@ hr {
     padding-bottom: 2%;
 }
 
+.card-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .h_service_pic{
-    width: 80%;
+    width: 44%;
+    height: 38vh;
     padding-bottom: 3%;
+    border-radius: 10px;
+}
+
+.link-details {
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%), #F7F7F7;
+    border-radius: 30px 0;
+    width: 40%;
+    padding: 6%;
+    position: relative;
+    bottom: 20%;
+}
+
+.view-btn {
+    color: #FFFFFF;
+    background: linear-gradient(0deg, #000000, #000000), #FFFFFF;
+    padding: 1% 12%;
+    border-radius: 8px;
+    letter-spacing: 0.6px;
 }
 
 
