--- a/frontend/src/Styles/Services.css
+++ b/frontend/src/Styles/Services.css
@@ -192,6 +192,14 @@
     background: rgba(0, 0, 0, 0.57);
 }
 
-input {
+.PopInput {
     height: 4vh;
+    text-align: left;
+    padding: 0 0.3%;
+}
+
+.sent {
+    display: flex;
+    justify-content: center;
+    
 }
