--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -14,13 +14,37 @@
     width: 100%;
     height: 96px;
     font-family: 'Inter';
-    font-size: 65px;
+    font-size: 3.5em;
     letter-spacing: 0.050em;
 
     display: flex;
     justify-content: center;
     align-items: center;
     
+}
+@media screen and (max-width : 480px) {
+    .ms{
+        font-size: 1.6em;
+        height: 50px;
+    }
+}
+@media screen and (min-width:481px) and (max-width : 576px) {
+    .ms{
+        font-size: 2.4em;
+        height: 50px;
+    }
+}
+@media screen and (min-width:577px) and (max-width : 768px) {
+    .ms{
+        font-size: 2.8em;
+        height: 50px;
+    }
+}
+@media screen and (min-width:769px) and (max-width : 992px) {
+    .ms{
+        font-size: 2.8em;
+        height: 50px;
+    }
 }
 
 hr {
@@ -43,8 +67,8 @@ hr {
 }
 
 .ms-services{
-    margin: 1.4rem 3rem; 
-    /*border:  0.5px solid #000000;*/
+    width: 100%;
+
 }
 
 #services{
@@ -54,7 +78,6 @@ hr {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    /*border:  0.5px solid #000000;*/
     padding-top: 5%;
     padding-bottom: 5%;
 }
@@ -67,9 +90,7 @@ hr {
     width: 70%;
     background: linear-gradient(180deg, rgba(255, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%), #1A83E4;
     border-radius: 8px;
-    
-    
-
+    border:  0.5px solid #000000;
 }
 
 .serv-text-wrapper{
@@ -116,4 +137,142 @@ hr {
     display: flex;
     justify-content: center;
 }
+
+
+@media screen and (max-width : 480px) {
+    .ms{
+        font-size: 1.6em;
+        height: 50px;
+    }
+    .home-text {
+        height: 200px;
+        font-size: .8em;
+    }
+    .ms-services{
+        margin: 1.4rem 0.5rem; 
+        width: 100%;
+    }
+    
+    .serv-wrapper{
+         width: 100%;
+    }
+    
+    .serv-text-wrapper{
+        font-size: 30px;
+    }
+    
+    .card-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .h_service_pic{
+       width: 96%;
+       height: 20vh;
+    }
+    
+    .link-details {
+        width: 98%;
+        border-radius: 0;
+    }
+
+}
+@media screen and (min-width:481px) and (max-width : 576px) {
+    .ms{
+        font-size: 2.4em;
+        height: 50px;
+    }
+
+    .ms-services{
+        margin: 1.4rem 0.5rem; 
+        width: 100%;
+    }
+    
+    .serv-wrapper{
+         width: 100%;
+    }
+    
+    .serv-text-wrapper{
+        font-size: 30px;
+    }
+    
+    .card-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .h_service_pic{
+       width: 96%;
+       height: 20vh;
+    }
+    
+    .link-details {
+        width: 98%;
+        border-radius: 0;
+    }
+}
+@media screen and (min-width:577px) and (max-width : 768px) {
+    .ms{
+        font-size: 2.8em;
+        height: 70px;
+    }
+    .ms-services{
+        margin: 1.4rem 0.5rem; 
+        width: 100%;
+    }
+    
+    .serv-wrapper{
+         width: 100%;
+    }
+    
+    .serv-text-wrapper{
+        font-size: 30px;
+    }
+    
+    .card-wrapper {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .h_service_pic{
+       width: 96%;
+       height: 20vh;
+    }
+    
+    .link-details {
+        width: 98%;
+        border-radius: 0;
+    }
+}
+@media screen and (min-width:769px) and (max-width : 992px) {
+    .ms{
+        font-size: 2.8em;
+        height: 50px;
+    }
+    .ms-services{
+       
+    }
+    .h_service_pic{
+        height: 19vh;
+     }
+}
+
+@media screen and (min-width:993px) and (max-width : 1200px) {
+    .h_service_pic{
+        height: 20vh;
+     }
+}
+@media screen and (min-width:1400px) and (max-width : 1600px) {
+    .home-text{
+        font-size: 1.35em;
+    }
+    .h_service_pic{
+        height: 28vh;
+     }
+     .link-details {
+       font-size: 1.4em;
+    }
+}
+
+
 
