--- a/frontend/src/components/EnquirePopUp.css
+++ b/frontend/src/components/EnquirePopUp.css
@@ -15,7 +15,7 @@
     position: relative;
     padding: 32px;
     width: 100%;
-    max-width: 640px;
+    max-width: 80%;
     /*background-color: #FFF;*/
     background:linear-gradient(180deg, rgba(255, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 100%), #1A83E4;
     border-radius: 25px;
@@ -23,6 +23,6 @@
 
 .popupForm-inner .close-btn {
     position: absolute;
-    top: 16px;
+    top: 2%;
     right: 35px;
 }
