--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -146,7 +146,7 @@ hr {
     }
     .home-text {
         height: 200px;
-        font-size: .8em;
+        font-size: 1em;
     }
     .ms-services{
         width: 100%;
