--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -15,15 +15,13 @@
     display: flex;
     flex-direction: row;
     
-    
 }
 
 .footer-logo {
     width: 50%;
     height: 300px;
-  
-
 }
+
 
 .info {
 
@@ -112,7 +110,7 @@ input {
     
     color: white;
     margin: 20% 0;
-    font-size: 120%;
+    font-size: 1rem;
     
 }
 
@@ -120,10 +118,23 @@ input {
 .f-mail, .f-no, 
 .terms {
     color: white;
-    font-size: 120%;
+    font-size: 1rem;
 }
 
+@media screen and (max-width:480px) {
+    .footer-logo {
+       display: none;
+    }
+    .info {
+        width: 100%;
+    }
 
+    #text {
+       width: 100%;
+        
+    }
+    
+}
 
 #foot-line {
     color: #000;
