--- a/frontend/src/components/EnquirePopUp.css
+++ b/frontend/src/components/EnquirePopUp.css
@@ -25,3 +25,9 @@
     top: 2%;
     right: 35px;
 }
+
+@media screen and (max-width:480px) {
+    .popupForm-inner {
+        max-width: 70%;
+    }
+}
