--- a/frontend/src/Styles/Contact.css
+++ b/frontend/src/Styles/Contact.css
@@ -7,7 +7,7 @@
     font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
-    font-size: 200%;
+    font-size: 2em;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -18,12 +18,16 @@
     
 }
 
+@media screen and (max-width:480px) {
+    #contact-header {
+        font-size: 1.5em;
+    }
+}
 
 .contacts {
     
     width: 100%;
-    height: 80vh;
-    
+    height: 80vh; 
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -88,4 +92,26 @@
 .InputContact {
     text-align: left;
     padding: 0 1%;
+}
+
+@media screen and (max-width:480px) {
+    .contacts {
+        flex-direction: column;
+    }
+    
+    .us {
+        width: 100%;
+        left: 0;
+    }
+
+    .contact-form {
+        width: 72%;
+        height: 38vh;
+        right: 8%;
+    }
+
+    .your-message {
+       min-height: 6vh;
+       max-height: 14vh;
+    }
 }
