--- a/frontend/src/Styles/About.css
+++ b/frontend/src/Styles/About.css
@@ -109,9 +109,36 @@
     top: 2%;
 }
 
-@media screen and (max-width:480px) {
+@media screen and (min-width:320px) and (max-width:325px) {
+    .abt-page {
+        margin: 1.5rem 2rem;
+    }
     .company {
-        height: none;
+        height: 18em;
+        font-size: .6rem;
+    }
+    #descr-text {
+        width: 100%;
+    }
+    #manag-header {
+        font-size: 1.2rem;
+    }
+    #team {
+        height: 19vh;
+    }
+    .person-wrapper {
+        font-size: .45rem;
+    }
+    .photo {
+        width: 52%;
+    }
+}
+@media screen and (min-width:325px) and (max-width:480px) {
+    .abt-page {
+        margin: 1.5rem 1.8rem;
+    }
+    .company {
+        height: 20em;
         font-size: .8rem;
     }
     #descr-text {
