--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -23,7 +23,7 @@
     
 }
 
-@media screen and (min-width:320px) and (max-width:325px) {
+@media screen and (max-width:325px) {
     .ms{
         font-size: 1.4em;
         height: 48px;
