--- a/frontend/src/Styles/Services.css
+++ b/frontend/src/Styles/Services.css
@@ -20,7 +20,16 @@
     margin-bottom: 5em;
 }
 
-@media screen and (max-width:480px) {
+@media screen and (min-width:280px) and (max-width:325px) {
+    .services_section1 .serv_header {
+        font-size: 1rem;
+    }
+    #hr-line1 {
+        margin-bottom: 2.8em;
+    }
+}
+
+@media screen and (min-width:325px) and (max-width:480px) {
     .services_section1 .serv_header {
         font-size: 1.4rem;
     }
@@ -47,12 +56,8 @@
     padding-bottom: 5%;
 
 }
-@media screen and (max-width:480px) {
-    .services_section1 .Website-wrapper {
-        flex-direction: column;
-    }
-}
-@media screen and (min-width:481px) and (max-width:576px) {
+
+@media screen  and (max-width:576px) {
     .services_section1 .Website-wrapper {
         flex-direction: column;
     }
@@ -150,8 +155,39 @@
 .hr-line {
     width: 100%;
 }
+@media screen and (min-width:280px) and (max-width:325px) {
+    .services_section1 .Website-wrapper .web-text-wrapper .Web-text-header {
+        font-size: 1.2rem;
+    }
+    .services_section1 .Website-wrapper .web-text-wrapper {
+        padding-bottom: 1.8em;
+    }
+    .services_section1 .Website-wrapper .web-text-wrapper .web-text {
+        width: 100%;
+        padding: 10% 6%;
+        font-size: 0.6rem;
+    }
 
-@media screen and (max-width:480px) {
+    .services_section1 .Website-wrapper .img-wrapper .price-wrapper {
+        width: 100%;
+        justify-content: space-around;
+    }
+
+    .price {
+        font-size: .5rem;
+        margin: 0;
+        padding: 0.6em 1em;
+    }
+
+    .services_section1 .Website-wrapper .img-wrapper .web-img {
+        width: 100%;
+    }
+
+    .hr-line {
+        margin: 1.675em 0;
+    }
+}
+@media screen and (min-width:325px) and (max-width:480px) {
     .services_section1 .Website-wrapper .web-text-wrapper {
         padding-bottom: 2em;
     }
@@ -218,8 +254,17 @@
     border-radius: 8px;
     padding: 16% 6%;
 }
-
-@media screen and (max-width:480px) {
+@media screen and (min-width:280px) and (max-width:325px) {
+    .services_section1 .Website-wrapper .web-text-wrapper .mobile-text {
+        width: 100%;
+        padding: 10% 6%;
+        font-size: .6rem;
+    }
+    .services_section1 .Website-wrapper .img-wrapper .price-wrapper .enquire {
+        font-size: .5rem;
+    }
+}
+@media screen and (min-width:325px) and (max-width:480px) {
     .services_section1 .Website-wrapper .web-text-wrapper .mobile-text {
         width: 100%;
         padding: 10% 6%;
@@ -284,8 +329,18 @@
 .services_section1 .Website-wrapper .img-wrapper .price-wrapper .enquire2:hover {
     background: rgba(0, 0, 0, 0.57);
 }
+@media screen and (min-width:280px) and (max-width:325px) {
+    .services_section1 .Website-wrapper .web-text-wrapper .software-text {
+        width: 100%;
+        padding: 10% 6%;
+        font-size: .6rem;
+    }
 
-@media screen and (max-width:480px) {
+    .services_section1 .Website-wrapper .img-wrapper .price-wrapper .enquire2 {
+        font-size: .5rem;
+    }
+}
+@media screen and (min-width:325px) and (max-width:480px) {
     .services_section1 .Website-wrapper .web-text-wrapper .software-text {
         width: 100%;
         padding: 10% 6%;
