--- a/frontend/src/Styles/Home.css
+++ b/frontend/src/Styles/Home.css
@@ -148,8 +148,7 @@ hr {
 
 @media screen and (min-width:320px) and (max-width:322px) {
     .home-text {
-        height: 22vh;
-        font-size: .7rem;
+       display: none;
     }
     .ms-services{
         width: 100%;
