--- a/frontend/src/Styles/Contact.css
+++ b/frontend/src/Styles/Contact.css
@@ -137,19 +137,24 @@
 @media screen and (min-width:325px) and (max-width:480px) {
     .contacts {
         flex-direction: column;
+        height: 65vh;
+        margin-top: 2em;
+        margin-bottom: 6.2em;
+        gap: 30px;
     }
     
     .us {
+        position: none;
         width: 100%;
-        left: 0;
+        font-size: .6rem;
     }
 
     .contact-form {
-        width: 78%;
-        height: 38vh;
-        right: 8%;
+        width: 100%;
+        height: 40vh;
+        right: 6%;
+        font-size: .6rem;
     }
-
     .reader {
         width: 95%;
     }
@@ -164,6 +169,7 @@
     }
 
     .submit-btn {
-        width: 32%;
+        font-size: .56rem;
+        width: 35%;
     }
 }
