--- a/frontend/src/Styles/Contact.css
+++ b/frontend/src/Styles/Contact.css
@@ -106,6 +106,7 @@
     
     .us {
         position: none;
+        left: 0;
         width: 100%;
         font-size: .6rem;
     }
@@ -147,6 +148,7 @@
     
     .us {
         position: none;
+        left: 0;
         width: 100%;
         font-size: .6rem;
     }
