--- a/frontend/src/components/Footer.css
+++ b/frontend/src/components/Footer.css
@@ -166,7 +166,7 @@ input {
     }
     
     .fill {
-        width: 40%;
+        width: 45%;
         font-size: .7rem;
     }
     
@@ -217,6 +217,16 @@ input {
     #text {
        width: 100%;
         
+    }
+
+    .fill {
+        width: 45%;
+        font-size: .7rem;
+    }
+    
+    .btn-sub {
+        width: 45%;
+        font-size: .72rem;
     }
     .foot-links {
         justify-content: space-around;
