--- a/frontend/src/Styles/About.css
+++ b/frontend/src/Styles/About.css
@@ -81,7 +81,7 @@
    padding-bottom: 1%;
 }
 
-#team {
+.team {
     width: 100%;
     height: 50vh;
     background: #1A83E4;
@@ -114,7 +114,7 @@
 }
 
 .intel {
-    color: aliceblue;
+    color: #DCCA87;
     font-size: 90%;
     font-family: 'Inter';
     font-style: normal;
@@ -138,7 +138,7 @@
     #manag-header {
         font-size: 1.2rem;
     }
-    #team {
+    .team {
         height: 19vh;
     }
     .person-wrapper {
@@ -159,19 +159,29 @@
     #descr-text {
         width: 100%;
     }
+   
     #manag-header {
         font-size: 1.8rem;
     }
-    #team {
-        height: 19vh;
+    .team {
+        height: 180vh;
+        flex-direction: column;
+        gap: 10px;
+        
     }
     .person-wrapper {
-        font-size: .34rem;
+        width: 290px;
+        justify-content: space-around;
+        align-items: center;
+        font-size: 1.4rem;
+        margin: 1em 0;
     }
     .photo {
         width: 52%;
     }
-    
+    .intel {
+        font-size: 1rem;
+    }
 }
 @media screen and (min-width:480px) and (max-width:576px) {
     .abt-page {
